# TC_Tracker

./: .gitignore  .gitmodules  README.md  README_en.md  README_zh.md
.github/actions/prepare-windows-vcpkg/: action.yml
.github/workflows/: build-tc-tracker-windows.yml  release-tc-tracker-cli.yml  warm-vcpkg-cache.yml
code/data/: myMap.json
code/projects/TC_Tracker/: TC_Tracker.sln  vcpkg.json
code/projects/TC_Tracker/TC_Tracker/: AboutWindow.xaml  App.xaml  App.xaml.cs  BoolConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  ProgressWindow.xaml  ResultWindow.xaml  ResultWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TC_Tracker - Backup.csproj  TC_Tracker.csproj  TC_Tracker.sln  VarSelector.xaml  VarSelector.xaml.cs  packages.config  path.html
code/projects/TC_Tracker/TC_Tracker/Properties/: Resources.Designer.cs  Settings.Designer.cs  Settings.settings  launchSettings.json
code/projects/TC_Tracker/TC_Tracker/TC_Tracker/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProgressWindow.xaml  ProgressWindow.xaml.cs  TC_Tracker.csproj
code/projects/TC_Tracker/TC_Tracker/TTCore/: TCsP.pb.cc  TCsP.pb.h  TTCore.vcxproj  TTCore.vcxproj.filters
code/projects/TC_Tracker/TC_Tracker/TTWrapper/: AssemblyInfo.cpp  Entity.cpp  NCFileInfo.cpp  NCFileInfo.h  TTWrapper.h  TTWrapper.vcxproj  TTWrapper.vcxproj.filters
code/projects/TC_Tracker/TC_Tracker/otherWindow/: AboutWindow.xaml  AboutWindow.xaml.cs  ParaSelWindow.xaml  ResultWindow.xaml  ResultWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TCsJsonWindow.xaml  TCsJsonWindow.xaml.cs  VarSelectPage1.xaml.cs  VarSelectPage2.xaml.cs  VarSelector.xaml
code/projects/TC_Tracker/TC_Tracker_CLI/: CMakeLists_specific.txt  main.cpp
code/projects/TC_Tracker/TC_Tracker_CLI/TC_Tracker_CLI/: CMakeLists.txt  CMakeLists_general.txt  main.cpp
code/projects/TC_Tracker/TC_Tracker_CLI/TC_Tracker_CLI.xcodeproj/: project.pbxproj
code/projects/TC_Tracker/TC_Tracker_mac/TC_Tracker_mac/: AppDelegate.swift  PreferencesViewController.swift  ProgressViewController.swift  ResultViewController.swift  Var2SelectViewController.swift  VarSelectViewController.swift  VarSelectWindowController.swift  ViewController.swift
code/projects/TC_Tracker/TC_Tracker_mac/TC_Tracker_mac.xcodeproj/: project.pbxproj
code/projects/TC_Tracker/TC_Tracker_original/: TC_Tracker.sln
code/projects/TC_Tracker/TC_Tracker_original/TC_Tracker/: TC_Tracker.csproj  my.html  path.html
code/projects/TC_Tracker/TC_Tracker_original/TTCore/: Entity.h  TTCore.rc  TTCore.vcxproj.filters
code/projects/TC_Tracker/TC_Tracker_original/TTWrapper/: Entity.h  ManagedObject.h  NCFileInfo.cpp
code/projects/TC_Tracker/TTCore/: Core.h  Entity.cpp  NCFileInfo.cpp  NCFileInfo.h  TCsP.pb.cc  TCsP.pb.h  TTCore.vcxproj  TTCore.vcxproj.filters  resource.h
code/projects/TC_Tracker/TTCore/include/: Processor.h  TC1Time.h  Typhoon.h  Utils.h  multiArray.h
code/projects/TC_Tracker/TTCore/src/: Processor.cpp  (+2 more)
code/projects/TC_Tracker/TTWrapper/: AssemblyInfo.cpp  Entity.cpp  Entity.h  ManagedObject.h  NCFileInfo.cpp  NCFileInfo.h  TTWrapper.cpp  TTWrapper.vcxproj  TTWrapper.vcxproj.filters  app.aps
code/projects/TC_Tracker_CLI/: CMakeLists.txt  CMakeLists_specific.txt  main.cpp  vcpkg.json
code/projects/TC_Tracker_mac/TC_Tracker_mac/: AppDelegate.swift  PreferencesViewController.swift  ProgressViewController.swift  ResultViewController.swift  TC_Tracker_mac-Bridging-Header.h  TCsJsonViewController.swift  Var2SelectViewController.swift  VarSelectViewController.swift  VarSelectWindowController.swift  ViewController.swift  path.html
code/projects/TC_Tracker_mac/TC_Tracker_mac.xcodeproj/: project.pbxproj
code/projects/TC_Tracker_original/: TC_Tracker.sln
code/projects/TC_Tracker_original/TC_Tracker/: App.xaml.cs  MainWindow.xaml.cs
code/projects/TC_Tracker_original/TTCore/: Core.h  TTCore.aps  TTCore.vcxproj
code/projects/TC_Tracker_original/TTWrapper/: TTWrapper.vcxproj
code/projects/core/: CMakeLists.txt  README.md  TCsP.proto
code/projects/core/include/: NCFileInfo.h  Processor.h  TCInfo.h  Typhoon.h  Utils.h  multiArray.h  uv2vr_cfd.h
code/projects/core/include_original/: NCFileInfo.h
code/projects/core/src/: NCFileInfo.cpp  Processor.cpp  uv2vr_cfd.cpp
code/projects/core/src_original/: Utils.cpp
code/pureCpp/: CMakeLists.txt  main.cpp
code/pureCpp/include/: Processor.h  Typhoon.h  Utils.h  multiArray.h
code/pureCpp/src/: Processor.cpp  TC1Time.cpp  Typhoon.cpp  Utils.cpp
code/pythonScripts/: haiyanTrack.txt  myyy.html  path.html  txt2Json.py
code/pythonScripts/html/: path.html
code/pythonScripts/tc_speed_direction/: tc_speed_direction.py
code/pythonScripts/tc_speed_direction/tp_class/: constants.py
code/pythonScripts/vorDistribution/: drawVorDistri.py
code/pythonScripts/vorticity/: toAbsoluteVorticity.py
code/pythonScripts/vorticity/cxxVer/: main.cpp
code/pythonScripts/vorticity/pythonVer/: toAbsoluteVorticity.py  try1.py  wrf_pvo.f
code/pythonVer/: main.py
code/pythonVer/math_calculate/: constants.py  get_e.py  get_minmax_distance.py  get_slope.py  point_dist.py
code/pythonVer/step_function/: get_real_Tp_step2.py  recognize_typhoon_step1.py  remove_noise_step3.py  steps_multi.py  steps_notMulti.py  tp_track_diagram_step4.py  try_step.py
code/pythonVer/tools/: find_nearest_grid.py  find_nearest_tp.py  generateSNum.py  get_original_data.py  get_tp_motion.py  get_typhoon_points.py  num_tp_today.py  osTime.py  pickleDump.py  pts_to_lonlats.py  scatter_diagram.py  try_tools.py
code/pythonVer/tp_class/: Tp_Day.py  Tp_bestT.py  Typhoon.py
code/scripts/explortStdTrackFile/: explore.py
code/scripts/html/: haiyanTrack.json  path.html
code/scripts/myMap2BoostBin/: CMakeLists.txt  main.cpp
code/scripts/tc_speed_direction/: calcDegree.py  tc_speed_lat.py
code/scripts/tc_speed_direction/tp_class/: Tp_bestT.py
code/scripts/try1/: try1.py
code/scripts/vorDistribution/: try1.py
code/scripts/vorticity/cxxVer/: CMakeLists.txt
code/scripts/vorticity/pythonVer/: extractForVor.py  rvdv.f
(+56 files in other folders)
